--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://rxdu.github.io
-title: Ruixiang's Blog
-subtitle: Sharing ideas and experience
+title: Ruixiang Du
+subtitle: Share ideas and experience
 author: Ruixiang Du
 simple_search: http://google.com/search
 description:
