--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://rxdu.github.io
 title: Ruixiang Du
-subtitle: ......Share ideas and experience
+subtitle: #------ Share ideas and experience
 author: Ruixiang Du
 simple_search: http://google.com/search
 description:
