add category list

--- a/_config.yml
+++ b/_config.yml
@@ -54,8 +54,8 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
-# blog_index_asides:
-# post_asides:
+blog_index_asides: [asides/recent_posts.html, custom/asides/top_category_list.html]
+post_asides: [asides/recent_posts.html, custom/asides/top_category_list.html]
 # page_asides:
 
 # ----------------------- #
