updated a lot of pages

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://rxdu.me
+url: http://rdu.im
 title: Ruixiang Du
 subtitle: #------ Share ideas and experience
 author: Ruixiang Du
